; ModuleID = '/home/carl/AnghaBench/git/extr_unpack-trees.c_verify_clean_submodule.c'
source_filename = "/home/carl/AnghaBench/git/extr_unpack-trees.c_verify_clean_submodule.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_entry = type { i32 }
%struct.unpack_trees_options = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.cache_entry*, %struct.unpack_trees_options*)* @verify_clean_submodule to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @verify_clean_submodule(i8* %0, %struct.cache_entry* %1, %struct.unpack_trees_options* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.cache_entry*, align 8
  %7 = alloca %struct.unpack_trees_options*, align 8
  store i8* %0, i8** %5, align 8
  store %struct.cache_entry* %1, %struct.cache_entry** %6, align 8
  store %struct.unpack_trees_options* %2, %struct.unpack_trees_options** %7, align 8
  %8 = load %struct.cache_entry*, %struct.cache_entry** %6, align 8
  %9 = call i32 @submodule_from_ce(%struct.cache_entry* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %20

12:                                               ; preds = %3
  %13 = load %struct.cache_entry*, %struct.cache_entry** %6, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = load %struct.cache_entry*, %struct.cache_entry** %6, align 8
  %16 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %15, i32 0, i32 0
  %17 = call i32 @oid_to_hex(i32* %16)
  %18 = load %struct.unpack_trees_options*, %struct.unpack_trees_options** %7, align 8
  %19 = call i32 @check_submodule_move_head(%struct.cache_entry* %13, i8* %14, i32 %17, %struct.unpack_trees_options* %18)
  store i32 %19, i32* %4, align 4
  br label %20

20:                                               ; preds = %12, %11
  %21 = load i32, i32* %4, align 4
  ret i32 %21
}

declare dso_local i32 @submodule_from_ce(%struct.cache_entry*) #1

declare dso_local i32 @check_submodule_move_head(%struct.cache_entry*, i8*, i32, %struct.unpack_trees_options*) #1

declare dso_local i32 @oid_to_hex(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
